# Aegis

./: .dockerignore  .gitignore  AGENT-SENTINEL-README.md  CLAUDE.md  Dockerfile  README.md  render.yaml
aegis_backend/: .env.example  README.md  backend.py  demo_router.py  mongo.py  requirements.txt
aegis_backend/api/: index.py
aegis_demo/: .env.example  README.md  __main__.py  requirements.txt  run_demo.py  run_parallel_demo.py
aegis_demo/agents/: __init__.py  customer_support_agent.py  fraud_detection_agent.py  loan_processing_agent.py  marketing_agent.py
aegis_demo/core/: __init__.py  demo_db.py  mock_aegis.py  tools.py
aegis_demo/data/: __init__.py  fake_data.py
aegis_demo_ui/: index.html  package-lock.json  package.json
aegis_demo_ui/src/: App.jsx  api.js  index.css
aegis_demo_ui/src/components/: ChatBubble.jsx  ChatInput.jsx  DemoAgentCard.jsx  FirewallEvent.jsx  FirewallFeed.jsx  InlineApproval.jsx
aegis_demo_ui/src/pages/: ChatPage.jsx  DemoPage.jsx  ScenarioPage.jsx
aegis_frontend/: .env.example  FRONTEND-DATA-IDEAS.md  README.md  package-lock.json  package.json
aegis_frontend/src/: App.jsx  api.js  index.css
aegis_frontend/src/components/: ActivityTimeline.jsx  AgentCard.jsx  AgentProfile.jsx  AnimatedNumber.jsx  ApprovalBanner.jsx  ApprovalCard.jsx  DashboardStatCards.jsx  FirewallDonut.jsx  LiveFeed.jsx  Navbar.jsx  Sidebar.jsx  StatsCards.jsx  ToolsList.jsx
aegis_frontend/src/context/: ThemeContext.jsx
aegis_frontend/src/pages/: ActivityPage.jsx  AgentDetailPage.jsx  AgentsPage.jsx  ApprovalsPage.jsx  DashboardPage.jsx
aegis_sdk/: README.md  main.py  pyproject.toml  setup.py
aegis_sdk/sentinel/: __init__.py  cli.py  context.py  core.py  db.py  decorators.py  exceptions.py  models.py
